kubernetes/apps/volsync-system/kopia/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kopia-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kopia
  oidc:
    provider:
      issuer: "https://id.${SECRET_DOMAIN}"
    clientID: "715bd640-6ee2-4f17-ab4c-b612ad67c70b"
    clientSecret:
      name: kopia-oidc-secret
    redirectURL: "https://kopia.${SECRET_DOMAIN}/oauth2/callback"
    logoutPath: "/logout"
    cookieDomain: "${SECRET_DOMAIN}"
    cookieNames:
      idToken: kopia-id-token
      accessToken: kopia-access-token
    forwardAccessToken: true
    scopes:
      - openid
      - profile
      - email
      - groups
